spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6491,10 +6491,7 @@ p {
   margin-bottom: 50px;
 }
 
-.main-testimonial {
-  padding-top: 80px;
-  padding-bottom: 100px;
-}
+
 
 .main-download-app {
   padding-top: 80px;
